# ai-content

./: .dockerignore  .env.docker.example  .gitignore  AGENTS.md  AiToEarn配置与自动化操作指引.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  PRD.md  README.md  README_zh.md  development-plan.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  用户使用说明书.md  账号注册指引.md
config/: .env.example  model_fallback.json  models.json  proofread_patterns.json  quality_gates.json  schedule.json  settings.py  sources.json  writing_styles.json
docs/: DEPLOYMENT.md  REVIEW.md  THREE_ROLE_REVIEW.md  article_analysis.md  content_type_system.md  source_article_optimization.md
kb/: INDEX.md
scripts/: cleanup_images.py  douyin-interact.py  douyin-interact.sh  init_directories.sh  run_agent.sh  run_publisher.sh  run_scout.sh  run_writer.sh  scan_actions.py  scan_actions.sh  setup.sh  watchdog.sh
skills/: __init__.py  action.py  agent_schemas.py  common.py  feedback.py  knowledge.py  llm.py  metrics.py  platform_adapters.py  publisher.py  publisher_toutiao.py  scout.py  screenshot.py  topic_analyzer.py  writer.py  writer_douyin.py  writer_router.py  writer_xhs.py
tests/: conftest.py  test_action.py  test_api_approval.py  test_api_config.py  test_api_data.py  test_api_health.py  test_api_kb.py  test_api_pipeline.py  test_api_prompts.py  test_api_traces.py  test_auth.py  test_background.py  test_common.py  test_config.py  test_database.py  test_feedback.py  test_feishu.py  test_helpers.py  test_integration.py  test_knowledge.py  test_llm.py  test_main.py  (+12 more)
(+95 files in other folders)
